Bug 159671 - trash aplet on panel uses doubleclick instead of single click
Summary: trash aplet on panel uses doubleclick instead of single click
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-03-21 22:09 UTC by Sebastian Kuźlak
Modified: 2008-03-21 23:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sebastian Kuźlak 2008-03-21 22:09:56 UTC
Version:            (using Devel)
Installed from:    Compiled sources
Compiler:          gcc 4.2.3 
OS:                Linux

Trahscan widget on a panel should use single click to open trash:/ in filemanager not doubleclick.
Comment 1 Dan Meltzer 2008-03-21 22:50:49 UTC
It currently uses the global click settings.

I'm not sure if that is appropriate in this case, however.
Comment 2 Aaron J. Seigo 2008-03-21 23:04:49 UTC
SVN commit 788591 by aseigo:

always behave like a button in the panel, just like icons.

make me wonder if Plasma::Icon shouldn't be FormFactor aware itself?

BUG:159671


 M  +17 -10    trash.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=788591