always behave like a button in the panel, just like icons.

make me wonder if Plasma::Icon shouldn't be FormFactor aware itself?

BUG:159671

svn path=/trunk/KDE/kdebase/workspace/; revision=788591